# paper-town-weather

./: .gitignore  app.py  pyproject.toml
tests/: test_fetch.py  test_heat_index.py  test_outdoor.py  test_summary.py
