[project]
name = "oddamavadi-weather"
version = "0.1.0"
description = "Climate Sentinel — local weather dashboard for Oddamavadi, Sri Lanka"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "plotly",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
